plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
	id "com.diffplug.spotless" version "6.22.0"
}

group = 'com.minhaz'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-jersey'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'org.javers:javers-spring-boot-starter-sql:7.3.5'
	implementation 'org.glassfish.jersey.test-framework:jersey-test-framework-core:3.1.3'
    testImplementation 'junit:junit:4.13.1'
    annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'
	testImplementation('org.apache.httpcomponents.client5:httpclient5:5.2.1')
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

apply from: "$projectDir/gradle/preCommit.gradle"

spotless {
	java {
		eclipse().configFile(rootProject.file('config/code-format/eclipse-java-google-style.xml'))

		trimTrailingWhitespace()
		indentWithSpaces(2)
		endWithNewline()
	}
}



